# neatcli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/ncli/: __init__.py  app.py  prompt.py  view.py
